[package]
name = "one-billion-row-challenge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "gen-examples"
path = "src/gen-examples.rs"

[[bin]]
name = "1brc"
path = "src/1brc.rs"

[dependencies]
bstr = "1.9.0"
fast-float = "0.2.0"
memchr = "2.7.1"
memmap = "0.7.0"
rayon = "1.8.0"
rustc-hash = "1.1.0"
smol_str = "0.2.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = "warn"
style = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
